// Copyright Â© 2016 The Things Network
// Use of this source code is governed by the MIT license that can be found in the LICENSE file.

syntax = "proto3";

import "github.com/TheThingsNetwork/ttn/api/api.proto";
import "github.com/TheThingsNetwork/ttn/api/gateway/gateway.proto";
import "github.com/TheThingsNetwork/ttn/api/router/router.proto";
import "github.com/TheThingsNetwork/ttn/api/broker/broker.proto";
import "github.com/TheThingsNetwork/ttn/api/handler/handler.proto";

package noc;

service Monitoring {
  rpc GatewayStatus(stream gateway.Status) returns (api.Ack);
  rpc RouterStatus(stream router.Status) returns (api.Ack);
  rpc BrokerStatus(stream broker.Status) returns (api.Ack);
  rpc HandlerStatus(stream handler.Status) returns (api.Ack);
}
